# latamfx-mcp

./: .dockerignore  .envrc  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/terraform/: README.md  main.tf  variables.tf
docs/: architecture.md
docs/adr/: 0001-hexagonal-architecture.md  0002-public-data-sources.md  0003-reconciliation-rule-engine.md
src/latamfx_mcp/: __init__.py  config.py  server.py
src/latamfx_mcp/application/: __init__.py  fx_service.py  reconciliation_service.py
src/latamfx_mcp/domain/: __init__.py  errors.py  models.py  reconciliation.py
src/latamfx_mcp/infrastructure/: __init__.py  cache.py  dolarapi.py  http_client.py
src/latamfx_mcp/ports/: __init__.py  fx_provider.py
tests/: conftest.py  test_dolarapi_adapter.py  test_fx_service.py  test_reconciliation.py  test_reconciliation_service.py  test_server_tools.py
