[project]
name = "latamfx-mcp"
version = "0.1.0"
description = "MCP server that exposes public LatAm FX data and an auditable reconciliation engine to AI agents."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Gonzalo Flores Kemec", email = "floreskemec@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "fintech", "fx", "forex", "latam", "reconciliation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.28.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "polars>=1.0",
    "tenacity>=8.3",
    "structlog>=24.1",
]

[project.urls]
Homepage = "https://github.com/floreskemec/latamfx-mcp"
Repository = "https://github.com/floreskemec/latamfx-mcp"
Issues = "https://github.com/floreskemec/latamfx-mcp/issues"

[project.scripts]
latamfx-mcp = "latamfx_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latamfx_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --cov=latamfx_mcp --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["latamfx_mcp"]
mypy_path = "src"
